# AnEventApi

./: Dockerfile  MANIFEST.in  README.md  docker-compose.yaml  requirements.txt  run.py  setup.cfg
eventapp/: __init__.py  config.py  errors.py  events.dev.db  models.py  seeds.py
eventapp/fixtures/: admins.yaml  email_senders.yaml  event_signups.yaml  events.yaml  users.yaml
eventapp/routes/: event_route.py  response.py  signup_event.py  user_route.py
eventapp/services/: sendmail.py  signature_util.py
front/: .env.production  Dockerfile  README.md  default.conf  package-lock.json  package.json
front/public/: index.html
front/src/: App.vue  main.js
front/src/components/: AccountBar.vue  AlertBar.vue  EventList.vue  EventSignup.vue  LoginPage.vue  RegisterPage.vue
front/src/config/: config.js
front/src/routers/: router.js
front/src/services/: event.service.js  index.js  signup.service.js  user.service.js
front/src/store/: account-module.js  event-module.js  index.js  signup-module.js
tests/: conftest.py  test_events.py  test_fixtures.py  test_signature.py  test_signups.py  test_users.py
