[metadata]
name = AnEventApi
version = 1.0.0
url = https://github.com/liushengli2020/AnEventApi/
license = Apache 2.0
maintainer = Liu shengli
maintainer_email = 2001.liu@gmail.com
description = An basic event api built with the Flask.
long_description = file: README.md
long_description_content_type = text/md

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    event_app
